--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>Slide Curso JavaScript</title>
 </head>
 <body>
+  <div>
+    <ul>
+      <li><img src="./img/foto1.jpg" alt="Foto 1"></li>
+      <li><img src="./img/foto2.jpg" alt="Foto 2"></li>
+      <li><img src="./img/foto3.jpg" alt="Foto 3"></li>
+      <li><img src="./img/foto4.jpg" alt="Foto 4"></li>
+      <li><img src="./img/foto5.jpg" alt="Foto 5"></li>
+      <li><img src="./img/foto6.jpg" alt="Foto 6"></li>
+    </ul>
+  </div>
+
   <script type="module" src="./js/script.js"></script>
 </body>
 </html>
