Estilo CSS do Slide adicionado

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Slide Curso JavaScript</title>
 </head>
 <body>
-  <div>
-    <ul>
+  <div class="slide-wrapper">
+    <ul class="slide">
       <li><img src="./img/foto1.jpg" alt="Foto 1"></li>
       <li><img src="./img/foto2.jpg" alt="Foto 2"></li>
       <li><img src="./img/foto3.jpg" alt="Foto 3"></li>
