--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.min.css">
   <title>Slide Curso JavaScript</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
     </ul>
   </div>
 
-  <script type="module" src="./js/script.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
