--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <li><img src="./img/foto6.jpg" alt="Foto 6"></li>
     </ul>
   </div>
+  <div class="arrow-nav">
+    <button class="prev">Anterior</button>
+    <button class="next">Próximo</button>
+  </div>
 
   <script type="module" src="./main.js"></script>
 </body>
