Custom Controls estilizados

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Slide Curso JavaScript</title>
 </head>
 <body>
+  <ul class="custom-control">
+    <li><img src="./img/foto1-thumb.jpg" alt="Foto 1"></li>
+    <li><img src="./img/foto2-thumb.jpg" alt="Foto 2"></li>
+    <li><img src="./img/foto3-thumb.jpg" alt="Foto 3"></li>
+    <li><img src="./img/foto4-thumb.jpg" alt="Foto 4"></li>
+    <li><img src="./img/foto5-thumb.jpg" alt="Foto 5"></li>
+    <li><img src="./img/foto6-thumb.jpg" alt="Foto 6"></li>
+  </ul>
   <div class="slide-wrapper">
     <ul class="slide">
       <li><img src="./img/foto1.jpg" alt="Foto 1"></li>
